<resources>
    <string name="app_name">DoorManage</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>



    <string name="dialog_title">title</string>
    <string name="dialog_message">message</string>
    <string name="dialog_ensure">确定</string>
    <string name="dialog_cancel">取消</string>


    <string name="back">返回</string>
    <string name="setting">设置</string>
    <string name="title_text">标题</string>
    <string name="loading">正在加载中…</string>
    <string name="add">添加</string>
    <string name="open_door">开门</string>
    <string name="close_door">关门</string>
    <string name="stop_door">停止</string>

    <string name="button_ensuer">确定</string>

    <string name="door_name">门名称:</string>
    <string name="door_id">门序号:</string>
    <string name="door_phone">门号码:</string>
    <string name="door_encoder_pulses">设置脉冲数:</string>
    <string name="door_pulse_upper_limit">上限脉冲数:</string>
    <string name="door_pulse_lower_limit">下限脉冲数:</string>
    <string name="door_password">门密码:</string>
    <!-- hint -->
    <string name="input_door_name">请输入门名称</string>
    <string name="input_door_id">请输入门序号</string>
    <string name="input_door_phone">请输入门号码</string>
    <string name="input_door_encoder_pulses">请输入设置脉冲数</string>
    <string name="input_door_pulse_upper_limit">请输入上限脉冲数</string>
    <string name="input_door_pulse_lower_limit">请输入下限脉冲数</string>
    <string name="input_door_password">请输入门密码</string>
    <string name="door_id_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>

    <string name="user_name">用户昵称:</string>
    <string name="user_phone">手机号:</string>
    <string name="user_name_null">用户昵称为空!</string>
    <string name="user_phone_null">手机号为空!</string>
    <string name="userphone_exist">已存在该手机号请勿重复添加</string>

    <string name="input_user_name">请输入用户昵称</string>
    <string name="input_user_phone">请输入手机号</string>

    <string name="add_successed">添加成功</string>
    <string name="doorphone_exist">已存在该手机号的门请勿重复添加</string>


    <string name="mainactivity_title_text">门管理</string>
    <string name="adddooractivity_title_text">添加门</string>
    <string name="doorcontrolactivity_title_text">控制中心</string>
    <string name="startactivity_start_up_text">正在启动中…</string>
    <string name="doorsettingactivity_title_text">门设置</string>
    <string name="managerusersactivity_title_text">用户管理</string>
    <string name="adduseractivity_title_text">添加用户</string>
    <string name="userdooractivity_title_text">用户门管理</string>

    <string name="control_close_door">关   门</string>
    <string name="control_open_door">开   门</string>
    <string name="control_stop_door">停   止</string>
    <string name="control_up_door">上 升</string>
    <string name="control_down_door">下 降</string>
    <!--已关闭：0-->
    <!--//			已开启：1-->
    <!--//			已下降：2-->
    <!--//			停止：  3-->
    <!--//			下降中：4-->
    <!--//			上升中：5-->
    <string name="door_opened_text">已 开 启</string>
    <string name="door_closed_text">已 关 闭</string>
    <string name="door_stoped_text">停   止</string>
    <string name="door_closing_text">下 降 中</string>
    <string name="door_openning_text">上 升 中</string>
    <string name="door_falling_text">门 上升或下降 完成</string>

    <string name="update_ensure">确认修改</string>
    <string name="toast_nameisnull">门名称不能为空！</string>
    <string name="toast_phoneisnull">门号码不能为空！</string>
    <string name="toast_encoder_pulsesisnull">设置脉冲数不能为空！</string>
    <string name="toast_pulse_upperisnull">上限脉冲数不能为空！</string>
    <string name="toast_pulse_lowerisnull">下限脉冲数不能为空！</string>
    <string name="toast_passwordisnull">门密码为空！</string>
    <string name="toast_phone_erro">输入正确的手机号码！</string>


    <string name="password_erro">密码错误</string>
    <string name="input_password">请输入密码</string>

    <string name="onekey_lock_door">一键锁门</string>

    <string name="updata_done">修改完毕</string>
    <string name="delete_done">删除完毕</string>

    <string name="dialog_positive_send">发送</string>
    <string name="dialog_positive_send_again">重新发送</string>
    <string name="dialog_text_send_promote">是否发送消息获取门信息!</string>
    <string name="dialog_text_sended">已发送!等待获取门信息…</string>
    <string name="dialog_title_promote">提示</string>
</resources>
