<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/title_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:text="@string/user_name"
                        android:textColor="@color/white_first_text_color"
                        android:textSize="@dimen/second_text_size" />

                    <EditText
                        android:textColorHint="@color/hint_color"
                        android:id="@+id/add_user_name_edittext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:hint="@string/input_user_name"
                        android:inputType="text"
                        android:textColor="@color/white_first_text_color" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/gridview_layout_background_pressedfalse_color" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="5dp" >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:gravity="end"
                        android:text="@string/user_phone"
                        android:textColor="@color/white_first_text_color"
                        android:textSize="@dimen/second_text_size" />

                    <EditText
                        android:textColorHint="@color/hint_color"
                        android:id="@+id/add_user_phone_edittext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="7"
                        android:hint="@string/input_user_phone"
                        android:inputType="phone"
                        android:maxLength="13"
                        android:textColor="@color/white_first_text_color" />
                </LinearLayout>


                <Button
                    android:background="@drawable/gridview_item_layout_bg"
                    android:id="@+id/add_user_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textColor="@color/white_first_text_color"
                    />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>